--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       gap: 0.6rem;
     }
 
-    .brand-logo {
+    <img src="logo.png" style="width:40px; height:40px; border-radius:50%;">
       width: 36px;
       height: 36px;
       border-radius: 50%;
@@ -643,4 +643,5 @@
           <p>
             Students can attend offline classes in Sector 89, Gurugram or online live classes from home.
           </p>
+
 
