--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       display: block;
     }
 
-    /* Layout */
     header {
       position: sticky;
       top: 0;
@@ -73,7 +72,6 @@
       gap: 0.6rem;
     }
 
-    /* REAL LOGO IMAGE */
     .brand-logo-img {
       width: 36px;
       height: 36px;
@@ -158,7 +156,6 @@
       padding: 1.2rem 1rem 2.5rem;
     }
 
-    /* Hero */
     .hero {
       display: grid;
       grid-template-columns: minmax(0, 3fr) minmax(0, 2.5fr);
@@ -273,7 +270,6 @@
       color: var(--muted);
     }
 
-    /* Sections */
     section {
       margin-top: 2.2rem;
     }
@@ -334,7 +330,6 @@
       margin-bottom: 0.2rem;
     }
 
-    /* Contact */
     .contact-wrapper {
       display: grid;
       grid-template-columns: minmax(0, 1.3fr) minmax(0, 1.2fr);
@@ -407,7 +402,6 @@
       color: #555;
     }
 
-    /* Footer */
     footer {
       margin-top: 2rem;
       padding: 1rem;
@@ -423,7 +417,6 @@
       font-weight: 600;
     }
 
-    /* Responsive */
     @media (max-width: 900px) {
       .hero {
         grid-template-columns: 1fr;
@@ -460,9 +453,8 @@
   <header>
     <div class="nav">
       <div class="brand">
-        <!-- REAL LOGO -->
+        <!-- replace logo.png with your optimized logo file -->
         <img src="logo.png" alt="Manyam Akademik Logo" class="brand-logo-img" />
-
         <div>
           <div class="brand-text-title">Manyam Akademik</div>
           <div class="brand-text-sub">Class 11–12 Commerce & CA Foundation</div>
@@ -677,21 +669,21 @@
             <div class="contact-value" style="font-size: 1rem; margin-top: 2px;">Manyam Akademik</div>
           </div>
 
-          <!-- Google Map iframe -->
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.934181433!2d76.971844375!3d28.423861475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1706a756e04d%3A0xb37d6a8ce28c6f3e!2sOrris%20Market%2089!5e0!3m2!1sen!2sin!4v1702212345678!5m2!1sen!2sin" 
-            width="100%" 
-            height="260" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
+          <!-- Exact Google Map iframe (verified listing) -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3508.741156982815!2d76.934441!3d28.423486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1706968d7df7%3A0x49ab9df0106969e1!2sManyam%20Akademik!5e0!3m2!1sen!2sin!4v1702312345678!5m2!1sen!2sin"
+            width="100%"
+            height="260"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
           </iframe>
 
           <!-- Button -->
           <div style="padding: 0.9rem 1rem;">
-            <a 
-              href="https://www.google.com/maps/place/Orris+Market+89/@28.42386,76.97184,17z/"
+            <a
+              href="https://www.google.com/maps/place/MANYAM+AKADEMIK/@28.4234911,76.934441,603m/data=!3m2!1e3!4b1!4m6!3m5!1s0x390d1706968d7df7:0x49ab9df0106969e1!8m2!3d28.4234864!4d76.9370159!16s/g/11yrzd18cs?entry=ttu"
               target="_blank"
               class="btn btn-outline"
               style="width: 100%; text-align:center; border-radius: 12px;">
